clang/test/BSC/Negative/Ownership/Owned/owned_memberExpr/owned_memberExpr.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

struct Base {
    int num;
};

struct A {
    int b;
    owned int* c; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    owned struct Base base; // expected-error {{type of 'struct Base' cannot be qualified by 'owned'}}
};

int * owned foo(owned int* a) { // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    return (int* owned)a;
}

void test2() {
    struct A owned a; // expected-error {{type of 'struct A' cannot be qualified by 'owned'}}
    int res = a.b;                  //unlike const, a.b's QualType is int(not owned int)
    int * owned res2 = foo(a.c);      //a.c's QualType is owned int*(not owned int* owned)
    int res3 = a.base.num;
}